All method parameters that could be final were made final. This helps transitioning towards closure-like programming.